# L14g

./: bun.lockb  package.json
.github/workflows/: build-and-test.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/2025-01-03-214028_create_clients/: down.sql  up.sql
src-tauri/src/: db.rs  enums.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src-tauri/src/services/: auth.rs  clients.rs  mod.rs
src-tauri/src/tests/: auth_test.rs  client_test.rs  db_test.rs  mod.rs
