[package]
name = "native-paas"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "native_paas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"] }
dotenvy = "0.15"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4.0"
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.5"
rand = "0.8"
tempfile = "3.3"
diesel_migrations = "2.0"
jsonwebtoken = "8.1"
